--- a/web/wp-content/themes/lf-theme/source/scss/components/_archive.scss
+++ b/web/wp-content/themes/lf-theme/source/scss/components/_archive.scss
@@ -164,8 +164,8 @@
 			position: absolute;
 			transform: translateY(-50%);
 			top: 50%;
-			width: 80%;
 			padding: 1rem 0;
+			max-width: 80%;
 			max-height: 95%;
 		}
 	}
